--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,7 @@
         <header id="header-new" class="border-b border-gray-300">
             <div class="px-[5%]">
                 <nav class="flex flex-col md:flex-row justify-between items-start text-sm md:text-base py-4 gap-4 md:gap-0">
-                    <div class="magnetic-item transition-transform duration-300">
+                    <div class="magnetic-item transition-transform duration-300 w-full md:w-auto flex justify-between items-center">
                         <a href="#" class="font-semibold tracking-tight button" id="logo">
                             <div class="u--clip u--rel">
                                 <p data-split="letters"> © MAHTO UTSAV </p>
@@ -52,12 +52,13 @@
                             <div class="button-bg"></div>
                         </a>
                     </div>
+
                     <div class="flex flex-col md:flex-row w-full md:w-auto gap-4 md:gap-0">
-                        <div class="pb-4 md:pb-0 md:pr-4 lg:pr-8 border-b md:border-b-0 md:border-r border-gray-300">
+                        <div class="hidden md:block pb-4 md:pb-0 md:pr-4 lg:pr-8 border-b md:border-b-0 md:border-r border-gray-300">
                             <h3 class="text-gray-900 font-medium mb-1">Status</h3>
                             <a href="https://calendly.com/utsavmahto0001/google-meet-session" target="_blank" class="block magnetic-item transition-transform duration-300 text-gray-500">Currently available for any type of collaboration</a>
                         </div>
-                        <div class="py-4 md:py-0 md:px-4 lg:px-8 border-b md:border-b-0 md:border-l border-gray-300">
+                        <div class="hidden md:block py-4 md:py-0 md:px-4 lg:px-8 border-b md:border-b-0 md:border-l border-gray-300">
                             <h3 class="text-gray-900 font-medium mb-1">Say hi,</h3>
                             <ul class="flex flex-wrap gap-x-4 gap-y-1 nav-links text-gray-500">
                                 <li><a target="_blank" href="https://www.instagram.com/utsav_609?igsh=YWl4cG9lNmY0MXU1" class="magnetic-item transition-transform duration-300">Instagram,</a></li>
@@ -66,11 +67,11 @@
                                 <li><a target="_blank" href="https://x.com/mahto_ji_05?t=K__epLRZ4LuBlM80lAJRLA&s=09" class="magnetic-item transition-transform duration-300">X</a></li>
                             </ul>
                         </div>
-                        <div class="pt-4 md:pt-0 md:pl-4 lg:pl-8 md:border-l border-gray-300">
-                            <h3 class="text-gray-900 font-medium mb-1">Navigate</h3>
-                            <ul class="flex flex-wrap gap-x-4 gap-y-1 nav-links text-gray-500">
+                        <div class="pt-0 md:pt-0 md:pl-4 lg:pl-8 md:border-l border-gray-300 mt-2 md:mt-0">
+                            <h3 class="text-gray-900 font-medium mb-1 hidden md:block">Navigate</h3>
+                            <ul class="flex flex-row md:flex-wrap gap-x-6 md:gap-x-4 gap-y-1 nav-links text-gray-500 justify-start md:justify-start">
                                 <li><a href="Projects.html" class="magnetic-item transition-transform duration-300">Projects,</a></li>
-                                <li><a href="aboutme.html" class="magnetic-item transition-transform duration-300">About Me,</a></li>
+                                <li><a href="index.html" class="magnetic-item transition-transform duration-300">Home,</a></li>
                                 <li><a href="https://calendly.com/utsavmahto0001/google-meet-session" target="_blank" class="magnetic-item transition-transform duration-300">Contact</a></li>
                             </ul>
                         </div>
@@ -88,7 +89,7 @@
                         </svg>
                         <a href="https://calendly.com/utsavmahto0001/google-meet-session" target="_blank" class="text-red-600 font-bold text-sm tracking-widest highlight uppercase button">
                             <div class="u--clip u--rel">
-                                <p data-split="letters">mahtoutsav123@gmail.com</p>
+                                <p data-split="letters">utsavmahto0001@gmail.com</p>
                             </div>
                             <div class="button-bg"></div>
                         </a>
@@ -101,7 +102,7 @@
         
             <div class="border-t border-gray-300">
                 <div class="flex flex-col md:flex-row">
-                    <div class="w-full md:w-1/3 lg:w-1/4 top-0 self-start md:sticky">
+                    <div class="w-full md:w-1/3 lg:w-1/4 top-0 self-start md:sticky z-10">
                          <div class="bg-black text-white px-[5%] py-2 flex items-center border-b border-r-0 md:border-r border-gray-300">
                             <div class="h-6 w-6 flex items-center justify-center mr-4 bg-red-600 p-1">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-full w-full text-white" viewBox="0 0 20 20" fill="currentColor">
@@ -166,7 +167,7 @@
                             </div>
                             <div class="flex flex-col md:flex-row justify-center items-center gap-8 py-16 md:py-24 bg-[#efefef] px-6">
                                 <img src="Pictures/Map of biher.png" alt="Map of Bihar, India" class="w-full max-w-sm h-auto rounded">
-                                <p class="text-xs font-bold tracking-widest text-gray-500 text-center md:text-left">FROM A SMALL PLACE KNOWN AS BIHAR, LOCATED IN INDIA</p>
+                                <p class="text-xs font-bold tracking-widest text-gray-500 text-center md:text-left">FROM A SMALL PLACE KNOWN AS LAKHISARAI, LOCATED IN BIHAR</p>
                             </div>
                         </section>
                         <section id="my-approach" class="main-section bg-[#efefef] text-[#212121] border-b border-gray-300">
