--- a/Projects.html
+++ b/Projects.html
@@ -62,10 +62,8 @@
     <div class="min-h-screen flex flex-col">
       <header id="header-new" class="border-b border-gray-300">
         <div class="px-[5%]">
-          <nav
-            class="flex flex-col md:flex-row justify-between items-start text-sm md:text-base py-4 gap-4 md:gap-0"
-          >
-            <div class="magnetic-item transition-transform duration-300">
+          <nav class="flex flex-col md:flex-row justify-between items-start text-sm md:text-base py-4 gap-4 md:gap-0">
+            <div class="magnetic-item transition-transform duration-300 w-full md:w-auto flex justify-between items-center">
               <a href="#" class="font-semibold tracking-tight button" id="logo">
                 <div class="u--clip u--rel">
                   <p data-split="letters">© MAHTO UTSAV</p>
@@ -73,12 +71,9 @@
                 <div class="button-bg"></div>
               </a>
             </div>
-            <div
-              class="flex flex-col md:flex-row w-full md:w-auto gap-4 md:gap-0"
-            >
-              <div
-                class="pb-4 md:pb-0 md:pr-4 lg:pr-8 border-b md:border-b-0 md:border-r border-gray-300"
-              >
+
+            <div class="flex flex-col md:flex-row w-full md:w-auto gap-4 md:gap-0">
+              <div class="hidden md:block pb-4 md:pb-0 md:pr-4 lg:pr-8 border-b md:border-b-0 md:border-r border-gray-300">
                 <h3 class="text-gray-900 font-medium mb-1">Status</h3>
                 <a
                   href="https://calendly.com/utsavmahto0001/google-meet-session"
@@ -86,76 +81,21 @@
                   >Currently available for any type of collaboration</a
                 >
               </div>
-              <div
-                class="py-4 md:py-0 md:px-4 lg:px-8 border-b md:border-b-0 md:border-l border-gray-300"
-              >
+              <div class="hidden md:block py-4 md:py-0 md:px-4 lg:px-8 border-b md:border-b-0 md:border-l border-gray-300">
                 <h3 class="text-gray-900 font-medium mb-1">Say hi,</h3>
-                <ul
-                  class="flex flex-wrap gap-x-4 gap-y-1 nav-links text-gray-500"
-                >
-                  <li>
-                    <a
-                      target="_blank"
-                      href="https://www.instagram.com/utsav_609?igsh=YWl4cG9lNmY0MXU1"
-                      class="magnetic-item transition-transform duration-300"
-                      >Instagram,</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      target="_blank"
-                      href="https://www.linkedin.com/in/mr-mahto-utsav-519396290?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                      class="magnetic-item transition-transform duration-300"
-                      >Linkedin,</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      target="_blank"
-                      href="http://discordapp.com/users/878469506094215228"
-                      class="magnetic-item transition-transform duration-300"
-                      >Discord,</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      target="_blank"
-                      href="https://x.com/mahto_ji_05?t=K__epLRZ4LuBlM80lAJRLA&s=09"
-                      class="magnetic-item transition-transform duration-300"
-                      >X</a
-                    >
-                  </li>
+                <ul class="flex flex-wrap gap-x-4 gap-y-1 nav-links text-gray-500">
+                  <li><a target="_blank" href="https://www.instagram.com/utsav_609?igsh=YWl4cG9lNmY0MXU1" class="magnetic-item transition-transform duration-300">Instagram,</a></li>
+                  <li><a target="_blank" href="https://www.linkedin.com/in/mr-mahto-utsav-519396290?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="magnetic-item transition-transform duration-300">Linkedin,</a></li>
+                  <li><a target="_blank" href="http://discordapp.com/users/878469506094215228" class="magnetic-item transition-transform duration-300">Discord,</a></li>
+                  <li><a target="_blank" href="https://x.com/mahto_ji_05?t=K__epLRZ4LuBlM80lAJRLA&s=09" class="magnetic-item transition-transform duration-300">X</a></li>
                 </ul>
               </div>
-              <div
-                class="pt-4 md:pt-0 md:pl-4 lg:pl-8 md:border-l border-gray-300"
-              >
-                <h3 class="text-gray-900 font-medium mb-1">Navigate</h3>
-                <ul
-                  class="flex flex-wrap gap-x-4 gap-y-1 nav-links text-gray-500"
-                >
-                  <li>
-                    <a
-                      href="Projects.html"
-                      class="magnetic-item transition-transform duration-300"
-                      >Projects,</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="aboutme.html"
-                      class="magnetic-item transition-transform duration-300"
-                      >About Me,</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="https://calendly.com/utsavmahto0001/google-meet-session"
-                      target="_blank"
-                      class="magnetic-item transition-transform duration-300"
-                      >Contact</a
-                    >
-                  </li>
+              <div class="pt-0 md:pt-0 md:pl-4 lg:pl-8 md:border-l border-gray-300 mt-2 md:mt-0">
+                <h3 class="text-gray-900 font-medium mb-1 hidden md:block">Navigate</h3>
+                <ul class="flex flex-row md:flex-wrap gap-x-6 md:gap-x-4 gap-y-1 nav-links text-gray-500 justify-start md:justify-start">
+                  <li><a href="index.html" class="magnetic-item transition-transform duration-300">Home,</a></li>
+                  <li><a href="aboutme.html" class="magnetic-item transition-transform duration-300">About Me,</a></li>
+                  <li><a href="https://calendly.com/utsavmahto0001/google-meet-session" target="_blank" class="magnetic-item transition-transform duration-300">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -189,7 +129,7 @@
                 class="text-red-600 font-bold text-sm tracking-widest highlight uppercase button"
               >
                 <div class="u--clip u--rel">
-                  <p data-split="letters">mahtoutsav123@gmail.com</p>
+                  <p data-split="letters">utsavmahto0001@gmail.com</p>
                 </div>
                 <div class="button-bg"></div>
               </a>
@@ -304,7 +244,6 @@
                 <div class="p-6 sm:p-8 md:p-16">
                   <div class="slider-container">
                     <div class="slider" id="slider">
-                      <!-- UPDATED: Slider items now have links and images -->
                       <div class="slider-wrapper" data-slide="1">
                         <a href="#project1" class="slider-item">
                           <img
@@ -377,6 +316,7 @@
                       </div>
                     </div>
                   </div>
+                  
                   <div class="flex flex-col md:flex-row gap-8 md:gap-16 mt-16">
                     <div class="w-full flex flex-col">
                       <p class="text-sm md:text-base leading-relaxed mb-12">
@@ -505,7 +445,6 @@
                           thoughtfully crafted, with design and code working
                           seamlessly together.
                         </p>
-                        <!-- <p>I care a lot about the small stuff — the little hovers, transitions, and animations that most people don't even notice, but definitely feel. Those micro-interactions are what make a site feel smooth, responsive, and alive. I like building things that feel thoughtful, where even the tiniest detail has a purpose.</p> -->
                       </div>
                     </div>
                     <div
